Use jvm_args_env.sh to set JVM args (#14487)